<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Main chat shortcut -->
    <shortcut
        android:shortcutId="main_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortLabel="@string/shortcut_main_chat"
        android:longLabel="@string/shortcut_main_chat_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.meshchat"
            android:targetClass="com.example.meshchat.MainActivity">
            <extra
                android:name="shortcut_target"
                android:value="main_chat" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- New message shortcut -->
    <shortcut
        android:shortcutId="new_message"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_message"
        android:longLabel="@string/shortcut_new_message_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.meshchat"
            android:targetClass="com.example.meshchat.MainActivity">
            <extra
                android:name="shortcut_target"
                android:value="new_message" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Settings shortcut -->
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_settings"
        android:longLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.meshchat"
            android:targetClass="com.example.meshchat.MainActivity">
            <extra
                android:name="shortcut_target"
                android:value="settings" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>